2000-01-23  Gary Houston  <ghouston@arglist.com>

	* filesys.c (scm_chown): omit port/fdes support if HAVE_FCHOWN is 
	not defined (thanks to Richard Y. Kim).

Thu Jan 20 13:00:38 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* Makefile.in: Removed, this is auto-generated.

Thu Jan 20 11:33:47 2000  Dirk Hermann <dirk@ida.ing.tu-bs.de> --applied 01/20/00 gjb

	* list.c: Put some variable initialization code at the point of
	declaration; Added a comment for list*; Formatting changes.

	* load.c: use SCM_NNULLP to make sure the end of a list is not
	reached yet.

2000-01-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* backtrace.c (scm_display_error_message): Bugfix: Don't use
	result of scm_list_p as C boolean.
	(scm_display_error_message, scm_set_print_params_x): Use new
	validation macros. (Thanks to Dirk Herrmann.)

	* net_db.c (scm_resolv_error): Cast result from hstrerror.

	* strports.c (st_end_input): Inserted parenthesis to get operator
	grouping correct.

	* list.h (scm_init_list): Removed SCM_P around prototypes.

	* fports.c, list.c, numbers.c, ports.c, stime.c, symbols.c,
	filesys.c, posix.c: Converted docstrings to ANSI C format and
	escaped " occurring inside string literals.

Tue Jan 18 13:21:08 2000  Mikael Djurfeldt  <mdj@r11n07-s.pdc.kth.se>

	* posix.c (scm_mknod): Escape " occuring inside docstring.

2000-01-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* alist.c, chars.c, debug.c, dynl.c, dynwind.c, error.c, eval.c,
	   evalext.c, filesys.c, gc.c, hash.c, hashtab.c, ioext.c,
	   keywords.c, list.c, load.c, macros.c, net_db.c, numbers.c,
	   objprop.c, ports.c, posix.c, print.c, procprop.c, procs.c,
	   ramap.c, regex-posix.c, root.c, scmsigs.c, simpos.c, socket.c,
	   stacks.c, stime.c, strings.c, strop.c, strports.c, struct.c,
	   symbols.c, throw.c, unif.c, vectors.c, version.c, vports.c,
	   weaks.c: Converted docstrings to ANSI C format.
	
	* filesys.c (scm_chmod), simpos.c (scm_system), version