@@ -1,3 +1,14 @@
+Tue Jan 25 13:28:56 2000  Greg J. Badros  <gjb@cs.washington.edu>
+
+	* random.c: Added documentation, from SLIB page:
+	http://angela.ctrl-c.liu.se/~calle/scheme/slib_toc.html
+
+Mon Jan 24 17:50:20 2000  Greg J. Badros  <gjb@cs.washington.edu>
+
+	* variable.c, version.c:  Added documentation, written by hand
+	since I could not find anything already written that was
+	relevant.
+
 2000-01-23  Gary Houston  <ghouston@arglist.com>
 
 	* filesys.c (scm_chown): omit port/fdes support if HAVE_FCHOWN is 
